test/error/LexResourceSyntax1.ci
public static class Test
{
	public static bool Run()
	{
		byte[] a = resource("foo"); //ERROR: Expected resource<byte[]> //ERROR: Expected a method
		return true;
	}
}
